--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,18 @@
 ul.list-group {
   min-height: 130px;
 }
+
+body {
+  font-family: "gluten", gluten ;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Bebas Neue", gluten;
+}
+
+#dropover
